<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Sellio POS</string>
	<string name="action_settings">Settings</string>
	<string name="total">Total</string>

	<string name="barcode">Barcode</string>
	<string name="cancel">Cancel</string>
	<string name="clear">Clear</string>
	<string name="edit">Edit</string>
	<string name="save">Save</string>
	<string name="print">Print</string>
	<string name="date">Date</string>
	<string name="dateAdded">Date</string>
	<string name="quantity">Quantity</string>
	<string name="balance">Balance</string>
	<string name="detail">Detail</string>

	<string name="remove">Remove</string>
	<string name="scan">Barcode</string>
	<string name="costPrice">Cost</string>
	<string name="unit_price">Unit Price</string>
	<string name="profit">Profit</string>
	<string name="name">Name</string>
	<string name="id">ID</string>
	<string name="cash">Cash</string>
	<string name="change">Change</string>
	<string name="hint_search">Search Product</string>
	<string name="hint_cash">Enter cash here</string>
	<string name="add_new_product">Add New Product</string>
	<string name="add_stock">Add Stocks</string>
	<string name="add">Add</string>
	<string name="delete">Delete</string>
	<string name="previous">&#9001;</string>
	<string name="next">&#9002;</string>
	<string name="inventory">Inventory</string>
	<string name="sale">Sale</string>
	<string name="report">Reports</string>

	<string name="pos">Pos</string>
	<string name="product">Products</string>
	<string name="title">Title</string>
	<string name="cost">Cost</string>
	<string name="price">Price</string>
	<string name="category">Category</string>
	<string name="sale_price">Price</string>
	<string name="product_Image">Product Image</string>
	<string name="item">Item</string>
	<string name="stocks">Stocks</string>
	<string name="purchase">Purchase</string>
	<string name="units">Units</string>
	<string name="cart">Cart</string>

	<string name="dialog_quit">Are you sure you want to QUIT?</string>
	<string name="dialog_remove_product">Are you sure you want to REMOVE this product?</string>
	<string name="dialog_clear_sale">Are you sure you want to CLEAR this sale?</string>
	<string name="hint_empty_sale">Sale is empty.</string>
	<string name="quit">Quit</string>
	<string name="no">No</string>
	<string name="product_detail">Product Detail</string>
	<string name="stock">Stock</string>
	<string name="success">Success</string>
	<string name="fail">Fail</string>
	<string name="please_input_all">Please fulfill all data.</string>
	<string name="need_money">Need</string>
	<string name="Delete">Delete</string>
	<string name="lang_en">English</string>
	<string name="lang_sw">Swahili</string>
	<string name="lang_jp">日本語 (jp)</string>
	<string name="hint_lang">Please restart the application to apply this language settings.</string>
	<string name="about_us"><![CDATA[<h2>Title</h2><br><p>Description here</p>]]></string>

	<string-array name="period">
		<item>Daily</item>
		<item>Weekly</item>
		<item>Monthly</item>
		<item>Yearly</item>
	</string-array>

	<style name="ButtonText">
		<item name="android:layout_width">fill_parent</item>
		<item name="android:layout_height">wrap_content</item>
		<item name="android:textColor">#ffffff</item>
		<item name="android:gravity">center</item>
		<item name="android:layout_margin">3dp</item>
		<item name="android:textSize">16sp</item>
		<item name="android:textStyle">normal</item>
		<item name="android:shadowColor">#000000</item>
		<item name="android:shadowDx">1</item>
		<item name="android:shadowDy">1</item>
		<item name="android:shadowRadius">2</item>
	</style>

	<string name="trialMsg">Demo version expired please contact vendor support</string>
	<string name="expire">EXPIRE</string>

	<string name="failed_to_connect_server">Failed to connect server. Please try again later.</string>
	<string name="title_activity_login">LoginActivity</string>

</resources>