<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_popupAddProduct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnBarcode"
                    style="@style/ButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:background="@drawable/btn_green"
                    android:textSize="16dp"
                    android:text="@string/scan" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/barcodeBox"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:ems="20"
                        android:hint="@string/barcode"
                        android:inputType="number"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/nameBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/labelUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/units"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/unitBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/costPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/costPrice"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/productCostEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/labelPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sale_price"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/productPriceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/labelCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/productCategoryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/unitPriceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/product_Image"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/productImageView"
                android:layout_width="91dp"
                android:layout_height="88dp"

                android:background="@drawable/picture"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnClear"
                    style="@style/ButtonText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/btn_red"
                    android:text="@string/clear"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnSave"
                    style="@style/ButtonText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/btn_green"
                    android:text="@string/save"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>