<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
	tools:context=".ui.activity.SaleDetailActivity">

    <LinearLayout
		android:id="@+id/totalContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="#099"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/totalBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="25sp" />
    </LinearLayout>

	<LinearLayout
		android:id="@+id/dateContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/totalContainer"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/date"
			android:textColor="#222"
			android:textSize="16sp" />

		<TextView
			android:id="@+id/dateBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:textSize="16sp" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/listContainer"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@+id/bottomButtonContainer"
		android:layout_below="@+id/dateContainer"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:baselineAligned="false"
			android:orientation="horizontal">

			<TableRow
				android:layout_width="0dp"
				android:layout_height="30dp"
				android:layout_weight="0.4"
				android:background="#FFFFFF"
				android:paddingLeft="1dip"
				android:paddingTop="1dip"
				android:paddingBottom="1dip">

				<TextView
					android:layout_width="0dp"
					android:layout_height="fill_parent"
					android:layout_weight="2"
					android:background="#666"
					android:gravity="center"
					android:paddingRight="3dp"
					android:text="@string/name"
					android:textColor="#FFFFFF" />
			</TableRow>

			<TableRow
				android:layout_width="0dp"
				android:layout_height="30dp"
				android:layout_weight="0.2"
				android:background="#FFFFFF"
				android:paddingLeft="1dip"
				android:paddingTop="1dip"
				android:paddingBottom="1dip">

				<TextView
					android:layout_width="0dp"
					android:layout_height="fill_parent"
					android:layout_weight="1.5"
					android:background="#666"
					android:gravity="center"
					android:paddingRight="3dp"
					android:text="@string/quantity"
					android:textColor="#FFFFFF" />
			</TableRow>

			<TableRow
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:layout_weight="0.2"
				android:background="#FFFFFF"
				android:paddingLeft="1dip"
				android:paddingTop="1dip"
				android:paddingRight="1dip"
				android:paddingBottom="1dip">

				<TextView
					android:layout_width="0dp"
					android:layout_height="30dp"
					android:layout_weight="0.75"
					android:background="#666"
					android:gravity="center"
					android:paddingRight="3dp"
					android:text="@string/sale_price"
					android:textColor="#FFFFFF" />
			</TableRow>

			<TableRow
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:layout_weight="0.2"
				android:background="#FFFFFF"
				android:paddingLeft="1dip"
				android:paddingTop="1dip"
				android:paddingRight="1dip"
				android:paddingBottom="1dip">

				<TextView
					android:layout_width="0dp"
					android:layout_height="30dp"
					android:layout_weight="0.75"
					android:background="#666"
					android:gravity="center"
					android:paddingRight="3dp"
					android:text="@string/total"
					android:textColor="#FFFFFF" />
			</TableRow>

		</LinearLayout>

		<ListView
			android:id="@+id/lineitemList"
			android:layout_width="match_parent"
			android:layout_height="match_parent"></ListView>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/bottomButtonContainer"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal"
		android:weightSum="3">

		<Button
			android:id="@+id/DeleteButton"
			style="@style/ButtonText"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/btn_red"
			android:text="@string/delete"
			android:visibility="invisible"/>

		<Button
			android:id="@+id/cancelEditButton"
			style="@style/ButtonText"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/btn_yellow"
			android:text="@string/cancel"
			android:visibility="invisible"/>

		<Button
			android:id="@+id/btnPrint"
			style="@style/ButtonText"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/btn_green"
			android:text="@string/print"
			android:onClick="onPrintBtnClicked"/>

	</LinearLayout>

</RelativeLayout>