<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnBarcode"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_blue"
            android:text="@string/scan" />

        <EditText
            android:id="@+id/searchBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/hint_search" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/gridView"
        android:layout_weight="0.72" />

    <Button
        android:id="@+id/addProductButton"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_green"
        android:ems="10"
        android:text="@string/add_new_product" />

</LinearLayout>