<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="10dp"
	android:background="@drawable/cart"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/totalPriceContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/total"
			android:textSize="40sp" />

		<TextView
			android:id="@+id/totalPrice"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:textColor="#009999"
			android:textSize="40sp" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/listHeaderContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/totalPriceContainer"
		android:baselineAligned="false"
		android:orientation="horizontal">

		<TableRow
			android:layout_width="0dp"
			android:layout_height="30dp"
			android:layout_weight="0.5"
			android:background="#FFFFFF"
			android:paddingLeft="1dip"
			android:paddingTop="1dip"
			android:paddingBottom="1dip">

			<TextView
				android:id="@+id/nameTextView"
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:layout_weight="2"
				android:background="#666666"
				android:gravity="center"
				android:paddingRight="3dp"
				android:text="@string/name"
				android:textColor="#FFFFFF"
				android:textStyle="normal" />
		</TableRow>

		<TableRow
			android:layout_width="0dp"
			android:layout_height="30dp"
			android:layout_weight="0.2"
			android:background="#FFFFFF"
			android:paddingLeft="1dip"
			android:paddingTop="1dip"
			android:paddingBottom="1dip">

			<TextView
				android:id="@+id/quantityTextView"
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:layout_weight="1.5"
				android:background="#666666"
				android:gravity="center"
				android:paddingRight="3dp"
				android:text="@string/quantity"
				android:textColor="#FFFFFF"
				android:textStyle="normal" />
		</TableRow>

		<TableRow
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="0.2"
			android:background="#FFFFFF"
			android:paddingLeft="1dip"
			android:paddingTop="1dip"
			android:paddingRight="1dip"
			android:paddingBottom="1dip">

			<TextView
				android:id="@+id/unitPriceTextView"
				android:layout_width="0dp"
				android:layout_height="30dp"
				android:layout_weight="0.75"
				android:background="#666666"
				android:gravity="center"
				android:paddingRight="3dp"
				android:text="@string/price"
				android:textColor="#FFFFFF"
				android:textStyle="normal" />
		</TableRow>

		<TableRow
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="0.2"
			android:background="#FFFFFF"
			android:paddingLeft="1dip"
			android:paddingTop="1dip"
			android:paddingRight="1dip"
			android:paddingBottom="1dip">

			<TextView
				android:id="@+id/totalPriceTextView"
				android:layout_width="0dp"
				android:layout_height="30dp"
				android:layout_weight="0.75"
				android:background="#666666"
				android:gravity="center"
				android:paddingRight="3dp"
				android:text="@string/total"
				android:textColor="#FFFFFF"
				android:textStyle="normal" />
		</TableRow>
	</LinearLayout>

	<ListView
		android:id="@+id/sale_List"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/btnContainer"
		android:layout_below="@+id/listHeaderContainer"
		android:paddingBottom="10dp"></ListView>

	<LinearLayout
		android:id="@+id/btnContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btnClear"
			style="@style/ButtonText"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="0.5"
			android:background="@drawable/btn_red"
			android:text="@string/clear" />

		<Button
			android:id="@+id/btnSave"
			style="@style/ButtonText"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="0.5"
			android:background="@drawable/btn_green"
			android:text="@string/save" />
	</LinearLayout>

</RelativeLayout>